--- a/website/src/index.html
+++ b/website/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Simplex Chat</title>
+    <link href="/css/tailwind.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/design3.css">
     <script src="/js/flag-anchor.js"></script>
 </head>
@@ -19,6 +20,14 @@
                 <li class="nav-link">
                     <a href="/{{ '' if lang == 'en' else lang }}">
                         <span class="nav-link-text">{{ "home" | i18n({}, lang ) | safe }}</span>
+                    </a>
+                </li>
+
+                <hr>
+
+                <li class="nav-link">
+                    <a href="/directory/">
+                        <span class="nav-link-text">{{ "directory" | i18n({}, lang ) | safe }}</span>
                     </a>
                 </li>
 
@@ -94,14 +103,6 @@
                             <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg>
                         </a></li>
                     </ul>
-                </li>
-
-                <hr>
-
-                <li class="nav-link">
-                    <a href="/jobs">
-                        <span class="nav-link-text">{{ "jobs" | i18n({}, lang ) | safe }}</span>
-                    </a>
                 </li>
 
                 <hr>
@@ -236,7 +237,7 @@
                         <h2>Communities That Last</h2>
                         <p>You will support your favorite groups with future Community vouchers.</p>
                         <p>Vouchers will pay for servers, to let your communities stay free and independent.</p>
-                        <a class="gradient-text" href="/">Learn more about Community Vouchers</a>
+                        <a class="gradient-text" href="/community-vouchers">Learn more about Community Vouchers</a>
                     </div>
                 </div>
             </section>
@@ -307,8 +308,11 @@
                 </div>
             </section>
 
+            {% include "footer.html" %}
+
         </main>
     </div>
+
 
     <script src="/js/directory.js"></script>
     <script src="/js/design3.js"></script>
