--- a/website/src/learn-more.html
+++ b/website/src/learn-more.html
@@ -3,7 +3,6 @@ layout: layouts/main.html
 title: "SimpleX Chat: private and secure messenger without any user IDs (not even random)"
 description: "SimpleX Chat - a private and encrypted messenger without any user IDs (not even random ones)! Make a private connection via link / QR code to send messages and make calls."
 templateEngineOverride: njk
-active_home: true
 ---
 {%- from "components/macro.njk" import overlay -%}
 
@@ -212,6 +211,102 @@ active_home: true
                     <li> {{ "comparison-section-list-point-7" | i18n({}, lang ) | safe }} - <a class="underline text-primary-light dark:text-primary-dark underline-offset-2" href="https://github.com/simplex-chat/simplex-chat/blob/stable/docs/SIMPLEX.md#comparison-with-p2p-messaging-protocols">{{ "see-here" | i18n({}, lang ) | safe }}</a></li>
                 </ol>
             </div>
+        </div>
+    </div>
+</section>
+
+<section id="how-secure-comparison" class="bg-primary-bg-light dark:bg-primary-bg-dark py-[90px] px-5">
+    <div class="text-grey-black dark:text-white container flex flex-col">
+        <h2 class="text-[35px] leading-[43px] md:leading-[55px] lg:leading-[36px] text-center font-bold mb-12 lg:mb-[90px]">How secure is end-to-end encryption in different messengers?</h2>
+
+        <div class="w-full overflow-auto">
+            <table class="w-full border-separate border-spacing-x-5 border-spacing-y-2">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th class="pb-4">
+                            <img class="h-[60px] mr-auto ml-auto" alt="simplex logo" src="/img/messengers/session.svg"/>
+                            <p>Session</p>
+                        </th>
+                        <th class="pb-4">
+                            <img class="h-[60px] mr-auto ml-auto" alt="simplex logo" src="/img/messengers/briar.svg"/>
+                            <p>Briar</p>
+                        </th>
+                        <th class="pb-4">
+                            <img class="h-[60px] mr-auto ml-auto" alt="simplex logo" src="/img/messengers/element.svg"/>
+                            <p>Element</p>
+                        </th>
+                        <th class="pb-4">
+                            <img class="h-[60px] mr-auto ml-auto" alt="simplex logo" src="/img/messengers/cwtch.png"/>
+                            <p>Cwtch</p>
+                        </th>
+                        <th class="pb-4">
+                            <img class="h-[60px] mr-auto ml-auto" alt="simplex logo" src="/img/messengers/signal.png"/>
+                            <p>Signal</p>
+                        </th>
+                        <th class="pb-4">
+                            <img class="h-[60px] mr-auto ml-auto" alt="simplex logo" src="/img/new/logo-symbol-light.svg"/>
+                            <p>SimpleX</p>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="min-w-[210px]">Message padding</td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/yellow-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/yellow-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                    </tr>
+                    <tr>
+                        <td class="min-w-[210px]">Repudiation (deniability)</td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/yellow-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/yellow-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px] flex justify-center items-center gap-0"><img class="h-[34px]" src="/img/design_3/green-tick.svg" alt="" srcset=""> <sup class="text-[#e2b01b] font-bold text-[18px]">1</sup></td>
+                    </tr>
+                    <tr>
+                        <td class="min-w-[210px]">Forward secrecy</td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                    </tr>
+                    <tr>
+                        <td class="min-w-[210px]">Break-in recovery</td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                    </tr>
+                    <tr>
+                        <td class="min-w-[210px]">2-factor key exchange</td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/yellow-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/yellow-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/yellow-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/green-tick.svg" alt="" srcset=""></td>
+                    </tr>
+                    <tr>
+                        <td class="min-w-[210px]">Post-quantum hybrid crypto</td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/red-x.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px]"><img class="h-[34px] mr-auto ml-auto" src="/img/design_3/yellow-tick.svg" alt="" srcset=""></td>
+                        <td class="min-w-[100px] h-[52px] flex justify-center items-center"><img class="h-[34px]" src="/img/design_3/green-tick.svg" alt="" srcset=""> <sup class="text-[#e2b01b] font-bold text-[18px]">2</sup></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </section>
