--- a/website/src/learn-more.html
+++ b/website/src/learn-more.html
@@ -1,6 +1,6 @@
 ---
 layout: layouts/main.html
-title: "SimpleX Chat: private and secure messenger without any user IDs (not even random)"
+title: "SimpleX Chat: Learn more about SimpleX messaging"
 description: "SimpleX Chat - a private and encrypted messenger without any user IDs (not even random ones)! Make a private connection via link / QR code to send messages and make calls."
 templateEngineOverride: njk
 ---
