improve mobile layout

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -86,7 +86,6 @@ active_home: true
 
             <section class="page-2 page">
                 <div class="area">
-                    <div class="image"></div>
                     <div class="text-container">
                         <h2>World's Most Secure Messaging</h2>
                         <p>SimpleX messaging has cutting-edge end-to-end encryption.</p>
@@ -98,7 +97,6 @@ active_home: true
 
             <section class="page-3 page">
                 <div class="area">
-                    <div class="image"></div>
                     <div class="text-container">
                         <h2>You Own<br>The Next Web</h2>
                         <p>SimpleX is founded on the belief that <span>you must own your identity, contacts and communities.</span></p>
@@ -109,7 +107,6 @@ active_home: true
 
             <section class="page-4 page">
                 <div class="area">
-                    <div class="image"></div>
                     <div class="text-container">
                         <h2>Communities That Last</h2>
                         <p>You will support your favorite groups with future Community vouchers.</p>
@@ -121,7 +118,6 @@ active_home: true
 
             <section class="page-5 page">
                 <div class="area">
-                    <div class="image"></div>
                     <div class="text-container">
                         <h2>SimpleX Roadmap to Free Internet</h2>
                         <div class="roadmap">
@@ -159,7 +155,8 @@ active_home: true
                         <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                         <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                         <a href="https://smp4.simplex.im/g#hr4lvFeBmndWMKTwqiodPz3VBo_6UmdGWocXd1SupsM" class="simplex-image" title="SimpleX users group" target="_blank">
-                            <img src="/img/new/logo-symbol-dark.svg">
+                            <img class="block dark:hidden" src="/img/new/logo-symbol-light.svg">
+                            <img class="hidden dark:block" src="/img/new/logo-symbol-dark.svg">
                         </a>
                         <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                         <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
