--- a/website/src/index.html
+++ b/website/src/index.html
@@ -16,7 +16,8 @@ active_home: true
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="theme-color" content="transparent">
     <title>{{ title }}</title>
     <meta name="description" content="{{ description }}"/>
     <meta name="Content-Type" content="text/html;charset=utf-8"/>
