--- a/website/src/index.html
+++ b/website/src/index.html
@@ -80,6 +80,23 @@ active_home: true
                     <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex.apk" target="_blank"><img src="/img/design_3/android-dark.png" /></a>
                 </div>
             </div>
+            <div class="publications-btns">
+                <a title="messenger recommendations" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                    <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
+                </a>
+                <a title="Whonix messenger recommendations" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
+                    <img src="/img/design_3/publications/whonix.png" alt="Whonix">
+                </a>
+                <a title="publication" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
+                    <img src="/img/design_3/publications/heise.png" alt="Heise">
+                </a>
+                <a title="review" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                    <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog">
+                </a>
+                <a title="podcast interview" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
+                    <img src="/img/design_3/publications/optout.png" alt="Opt Out">
+                </a>
+            </div>
         </section>
 
         <main>
