add security btns

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -97,6 +97,20 @@ active_home: true
                     <img src="/img/design_3/publications/optout.png" alt="Opt Out">
                 </a>
             </div>
+            <div class="security-btns">
+                <a title="security assessment" href="https://simplex.chat/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html" target="_blank">
+                    <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
+                </a>
+                <a class="box-btn btn-1" href="">
+                    2022
+                </a>
+                <a class="box-btn btn-2" href="">
+                    2024
+                </a>
+                <a class="security-audits" href="">
+                    Security Audits
+                </a>
+            </div>
         </section>
 
         <main>
