--- a/website/src/index.html
+++ b/website/src/index.html
@@ -98,18 +98,18 @@ active_home: true
                 </a>
             </div>
             <div class="security-btns">
-                <a title="security assessment" href="https://simplex.chat/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html" target="_blank">
+                <a title="security assessment" href="https://www.trailofbits.com/about" target="_blank">
                     <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
                 </a>
-                <a class="box-btn btn-1" href="">
+                <a class="box-btn btn-1" title="Security Review 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
                     2022
                 </a>
-                <a class="box-btn btn-2" href="">
+                <a class="box-btn btn-2" title="Security Review 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
                     2024
                 </a>
-                <a class="security-audits" href="">
+                <p class="security-audits">
                     Security Audits
-                </a>
+                </p>
             </div>
         </section>
 
