add hash & update pages

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -127,18 +127,18 @@ active_home: true
         <main>
             <div class="section-bg"></div>
 
-            <section class="page-2 page">
+            <section id="messaging" class="page-2 page">
                 <div class="area">
                     <div class="text-container">
                         <h2>World's Most Secure Messaging</h2>
                         <p>SimpleX messaging has cutting-edge end-to-end encryption.</p>
                         <p>For your security, servers can’t see your messages <span>or who you talk to.</span></p>
-                        <a class="gradient-text" href="/learn-more">Learn more about SimpleX messaging</a>
+                        <a class="gradient-text" href="/messaging">Learn more about SimpleX messaging</a>
                     </div>
                 </div>
             </section>
 
-            <section class="page-3 page">
+            <section id="nextweb" class="page-3 page">
                 <div class="area">
                     <div class="text-container">
                         <h2>You Own<br>The Next Web</h2>
@@ -148,18 +148,18 @@ active_home: true
                 </div>
             </section>
 
-            <section class="page-4 page">
+            <section id="token" class="page-4 page">
                 <div class="area">
                     <div class="text-container">
                         <h2>Communities That Last</h2>
                         <p>You will support your favorite groups with future Community vouchers.</p>
                         <p>Vouchers will pay for servers, to let your communities stay free and independent.</p>
-                        <a class="gradient-text" href="/community-vouchers">Learn more about Community Vouchers</a>
+                        <a class="gradient-text" href="/token">Learn more about Community Vouchers</a>
                     </div>
                 </div>
             </section>
 
-            <section class="page-5 page">
+            <section id="roadmap" class="page-5 page">
                 <div class="area">
                     <div class="text-container">
                         <h2>SimpleX Roadmap to Free Internet</h2>
@@ -182,7 +182,7 @@ active_home: true
                 </div>
             </section>
 
-            <section class="page-6 page">
+            <section id="directory" class="page-6 page">
                 <div class="area">
                     <div class="group-images">
                         <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
