--- a/website/src/index.html
+++ b/website/src/index.html
@@ -71,13 +71,55 @@ active_home: true
                     <h1>Be Free</h1>
                     <h2 class="gradient-text">Freedom & Security<br>of Your Communications</h2>
                     <p>The first network where you own your identity, contacts, and groups.</p>
-                </div>
-                <div class="socials">
-                    <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg" /></a>
-                    <a class="google-play-btn hidden" href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank" title="Public iOS preview on TestFlight"><img src="/img/new/google_play.svg" /></a>
-                    <a class="f-droid-btn hidden" href="{{ '' if lang == 'en' else '/' ~ lang }}/fdroid" title="SimpleX F-Droid Repository"><img src="/img/new/f_droid.svg" /></a>
-                    <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" /></a>
-                    <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex.apk" target="_blank"><img src="/img/design_3/android-dark.png" /></a>
+
+                    <div class="socials">
+                        <a href="/downloads" class="desktop-app-btn hidden" title="Download SimpleX Desktop App">
+                            <div class="btn-content">
+                                <div>
+                                    <img class="no-border" src="/img/design_3/socials/linux.png" />
+                                    <img class="no-border" src="/img/design_3/socials/apple.png" alt="">
+                                    <img class="no-border" src="/img/design_3/socials/windows.png" alt="">
+                                </div>
+                                <p>Download Desktop App</p>
+                            </div>
+                        </a>
+                        <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg" /></a>
+                        <a class="google-play-btn hidden" href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank" title="Public iOS preview on TestFlight"><img src="/img/new/google_play.svg" /></a>
+                        <a class="f-droid-btn hidden" href="{{ '' if lang == 'en' else '/' ~ lang }}/fdroid" title="SimpleX F-Droid Repository"><img src="/img/new/f_droid.svg" /></a>
+                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" /></a>
+                        <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex.apk" target="_blank"><img src="/img/design_3/android-dark.png" /></a>
+                    </div>
+                    <div class="security-btns">
+                        <a title="security assessment" href="https://www.trailofbits.com/about" target="_blank">
+                            <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
+                        </a>
+                        <a class="box-btn btn-1" title="Security Review 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
+                            2022
+                        </a>
+                        <a class="box-btn btn-2" title="Security Review 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
+                            2024
+                        </a>
+                        <p class="security-audits">
+                            Security Audits
+                        </p>
+                    </div>
+                    <div class="publications-btns">
+                        <a title="messenger recommendations" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                            <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
+                        </a>
+                        <a title="Whonix messenger recommendations" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
+                            <img src="/img/design_3/publications/whonix.png" alt="Whonix">
+                        </a>
+                        <a title="publication" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
+                            <img src="/img/design_3/publications/heise.png" alt="Heise">
+                        </a>
+                        <a title="review" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                            <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog">
+                        </a>
+                        <a title="podcast interview" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
+                            <img src="/img/design_3/publications/optout.png" alt="Opt Out">
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -85,18 +127,18 @@ active_home: true
         <main>
             <div class="section-bg"></div>
 
-            <section class="page-2 page">
+            <section id="messaging" class="page-2 page">
                 <div class="area">
                     <div class="text-container">
                         <h2>World's Most Secure Messaging</h2>
                         <p>SimpleX messaging has cutting-edge end-to-end encryption.</p>
                         <p>For your security, servers can’t see your messages <span>or who you talk to.</span></p>
-                        <a class="gradient-text" href="/learn-more">Learn more about SimpleX messaging</a>
+                        <a class="gradient-text" href="/messaging">Learn more about SimpleX messaging</a>
                     </div>
                 </div>
             </section>
 
-            <section class="page-3 page">
+            <section id="nextweb" class="page-3 page">
                 <div class="area">
                     <div class="text-container">
                         <h2>You Own<br>The Next Web</h2>
@@ -106,18 +148,18 @@ active_home: true
                 </div>
             </section>
 
-            <section class="page-4 page">
+            <section id="token" class="page-4 page">
                 <div class="area">
                     <div class="text-container">
                         <h2>Communities That Last</h2>
                         <p>You will support your favorite groups with future Community vouchers.</p>
                         <p>Vouchers will pay for servers, to let your communities stay free and independent.</p>
-                        <a class="gradient-text" href="/community-vouchers">Learn more about Community Vouchers</a>
+                        <a class="gradient-text" href="/token">Learn more about Community Vouchers</a>
                     </div>
                 </div>
             </section>
 
-            <section class="page-5 page">
+            <section id="roadmap" class="page-5 page">
                 <div class="area">
                     <div class="text-container">
                         <h2>SimpleX Roadmap to Free Internet</h2>
@@ -140,7 +182,7 @@ active_home: true
                 </div>
             </section>
 
-            <section class="page-6 page">
+            <section id="directory" class="page-6 page">
                 <div class="area">
                     <div class="group-images">
                         <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
