deploy: c16cb841fa79f14eda9703e3ac694b891b473403

--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -650,7 +650,7 @@ window.addEventListener('scroll',changeHeaderBg);
             <h1 class="text-[38px] leading-[43px] font-bold max-w-[500px] mb-[30px] primary-header-contact">Вы получили адрес контакта для соединения в SimpleX Chat</h1>
             <h2 class="text-[20px] leading-[28px] text-[#606C71] dark:text-white font-bold max-w-[475px] mb-[80px] secondary-header-contact">Отсканируйте QR-код с помощью приложения SimpleX Chat на Вашем телефоне или планшете.</h2>
             <p class="text-grey-black dark:text-white text-base mb-[16px]">
-                Публичные ключи и адрес очереди сообщений в этой ссылке НЕ отправляются по сети при просмотре этой страницы — они содержатся в хэш-фрагменте URL-адреса ссылки.
+                Публичные ключи и адрес очереди сообщений в этой ссылке НЕ отправляются по сети при просмотре этой страницы — они содержатся в хеш-фрагменте URL-адреса ссылки.
             </p>
             <p class="text-grey-black dark:text-white text-base">Еще не скачали SimpleX Chat?</p>
             <p class="text-grey-black dark:text-white text-base mb-[24px]">Используйте ссылки ниже, чтобы загрузить приложение.</p>
@@ -745,7 +745,7 @@ window.addEventListener('scroll',changeHeaderBg);
     
                     <div class="contact-tab-content flex flex-col gap-10">
                         <p class="text-base mb-5">
-                            Публичные ключи и адрес очереди сообщений, указанные в этой ссылке, НЕ отправляются по сети при просмотре этой страницы —<br> они содержатся в хэш-фрагменте URL-адреса ссылки.
+                            Публичные ключи и адрес очереди сообщений, указанные в этой ссылке, НЕ отправляются по сети при просмотре этой страницы —<br> они содержатся в хеш-фрагменте URL-адреса ссылки.
                         </p>
                         <canvas class="self-center conn_req_uri_qrcode"></canvas>
                     </div>
