deploy: ea1e5a57e77b5f21764fd78974c4c03e1cb6b48a

--- a/hu/index.html
+++ b/hu/index.html
@@ -743,7 +743,7 @@ window.addEventListener('scroll',changeHeaderBg);
         </div>
     </div>
 
-                        <a href="javascript:void(0)" data-show-overlay="security-assessment" class="open-overlay-btn underline text-primary-light dark:text-primary-dark block text-center xl:text-left xl:rtl:text-right text-[14px] xl:text-[16px] leading-[34px] underline-offset-2">Biztonsági auditok</a>
+                        <a href="javascript:void(0)" data-show-overlay="security-assessment" class="open-overlay-btn underline text-primary-light dark:text-primary-dark block text-center xl:text-left xl:rtl:text-right text-[14px] xl:text-[16px] leading-[34px] underline-offset-2">Biztonsági felmérések</a>
                         
     
     <div id="security-assessment" data-scroll-to="" class="overlay hidden fixed top-0 left-0 bottom-0 right-0 before:absolute before:w-full before:h-full bg-transparent before:bg-secondary-bg-light dark:before:bg-primary-bg-dark before:opacity-90 items-center justify-center p-3 md:p-10 z-[10000]">
